src/views/PuzzleList/PuzzleList.css
/*
 * Copyright (C)  Online-Go.com
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.PuzzleList {
    /* here */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 1rem;

    table {
        overflow: hidden;
    }

    .puzzle-list-container {
        width: 100%;

        td.icon {
            width: 70px;
        }
    }

    td.name {
        font-weight: bold;
    }

    .MiniGoban {
        height: 0;
        width: 64px;
        margin-top: 20px;
        transform: translateY(20px);
        overflow: visible;
        background-color: red;

        .inner-container {
            overflow: visible;
        }
    }

    .icon {
        text-align: center;
    }

    .rating-count {
        color: #919191;
    }

    .rating {
        .fa-star, .fa-star-half-o {
            color: #FFB74D;
        }
    }
}

